# pre-commit-hooks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Pipfile  README.md  pylintrc.toml  requirements.txt  setup.cfg
.github/workflow/: python.yaml
.github/workflows/: python.yaml
pre_commit_hooks/: constants.py  convert_beginning_helper.py  convert_beginning_spaces.py  convert_beginning_tabs.py  convert_text_to_html.py  json_helper.py  minify_json.py  prettify_json.py  utils.py
pre_commit_hooks/testdata/: special-chars.json
tests/: convert_beginning_spaces_test.py  convert_beginning_tabs_test.py
